<resources>
    <string name="app_name">Moonlight</string>
    <string name="menu_main">Главная</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_cart">Корзина</string>
    <string name="menu_account">Аккаунт</string>
    <string name="menu_categoria">Категория</string>
    <string name="preview_category">Превью категории</string>
    <string name="in_develop">В разработке</string>
    <string name="status_start">Start</string>
    <string name="status_loading">Loading</string>
    <string name="status_error">Error</string>
    <string name="image_dish_description">Image Dish</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="close_image_description">Закрыть</string>
    <string name="favotite_image_description">Избранное</string>
    <string name="name_dish">Название блюда</string>
    <string name="cost">Стоимость</string>
    <string name="wight">Вес</string>
    <string name="add_to_cart_done">Добавлено</string>
    <string name="text_buy">Оплатить</string>
    <string name="buy_is_done">Оплачено</string>
    <string name="add_in_cart_new_dash">Добавьте блюда в корзину</string>
    <string name="count_dish">1</string>
    <string name="button_plus">button plus</string>
    <string name="button_minus">button minus</string>
</resources>